orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/Agent_API_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Agentforce Headless Agent API connections</description>
    <label>Agent API Config</label>
    <pluralLabel>Agent API Configs</pluralLabel>
</CustomObject>