orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>Agent ID</description>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>