orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>Agent Name</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>