orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Client ID</description>
    <label>Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>