orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>