orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Active</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>