orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Org_URL__c.field-meta.xml
<CustomField>
    <fullName>Org_URL__c</fullName>
    <description>Org URL</description>
    <label>Org URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>