orgs/claim-core/force-app/main/default/objects/Agent_API_Config__mdt/fields/Timeout_MS__c.field-meta.xml
<CustomField>
    <fullName>Timeout_MS__c</fullName>
    <label>Timeout MS</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>